// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryButton renders correctly - default 1`] = `
<View
  accessibilityLabel="Pay Now"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "elevation": 8,
            "shadowColor": "#995C41",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 5,
            "width": "100%",
          },
          {
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 5,
            "transform": [
              {
                "translateY": 0,
              },
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderCurve": "continuous",
            "borderRadius": 8,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 21,
            "paddingLeft": 16,
            "paddingRight": 19,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <LinearGradient
          colors={
            [
              "#202020",
              "#0d0d0d",
            ]
          }
          end={
            {
              "x": 0,
              "y": 1,
            }
          }
          locations={
            [
              0,
              0.9018,
            ]
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            [
              {
                "backgroundColor": "#111111",
                "borderRadius": 8,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 0,
              },
            ]
          }
        />
        <View
          pointerEvents="none"
          style={
            [
              {
                "borderColor": "rgba(255, 154, 109, 0.25)",
                "borderCurve": "continuous",
                "borderRadius": 8,
                "borderWidth": 1,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 1,
              },
            ]
          }
        />
        <View
          pointerEvents="none"
          style={
            [
              {
                "borderBottomLeftRadius": 3,
                "borderBottomRightRadius": 3,
                "bottom": 5,
                "height": 6,
                "left": 0,
                "position": "absolute",
                "right": 3,
              },
              {
                "transform": [
                  {
                    "translateY": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "transparent",
                "rgba(255, 255, 255, 0.04)",
                "rgba(255, 255, 255, 0.12)",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            locations={
              [
                0,
                0.4,
                1,
              ]
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "borderBottomLeftRadius": 7,
                "borderBottomRightRadius": 7,
                "flex": 1,
              }
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            [
              {
                "borderBottomWidth": 5,
                "borderColor": "#000000",
                "borderCurve": "continuous",
                "borderRadius": 8,
                "borderRightWidth": 3,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 1,
              },
            ]
          }
        />
        <View
          pointerEvents="none"
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 0,
              },
            ]
          }
        >
          <View
            style={
              {
                "borderColor": "rgba(0,0,0,0.6)",
                "borderCurve": "continuous",
                "borderLeftWidth": 1,
                "borderRadius": 8,
                "borderRightWidth": 1,
                "borderTopWidth": 2,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <LinearGradient
            colors={
              [
                "rgba(0,0,0,0.8)",
                "transparent",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "borderTopLeftRadius": 8,
                "borderTopRightRadius": 8,
                "height": 16,
                "width": "100%",
              }
            }
          />
        </View>
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "PlusJakartaSans-Medium",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          Pay Now
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton renders correctly - disabled 1`] = `
<View
  accessibilityLabel="Pay Now"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#202020",
          "borderColor": "#202020",
          "borderRadius": 12,
          "borderWidth": 1,
          "justifyContent": "center",
          "padding": 16,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#444444",
            "fontFamily": "PlusJakartaSans-Medium",
            "fontSize": 16,
            "lineHeight": 24,
            "textAlign": "center",
          }
        }
      >
        Pay Now
      </Text>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton renders correctly - loading 1`] = `
<View
  accessibilityLabel="Pay Now"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "elevation": 8,
            "shadowColor": "#995C41",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 5,
            "width": "100%",
          },
          {
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 5,
            "transform": [
              {
                "translateY": 0,
              },
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderCurve": "continuous",
            "borderRadius": 8,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 21,
            "paddingLeft": 16,
            "paddingRight": 19,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <LinearGradient
          colors={
            [
              "#202020",
              "#0d0d0d",
            ]
          }
          end={
            {
              "x": 0,
              "y": 1,
            }
          }
          locations={
            [
              0,
              0.9018,
            ]
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            [
              {
                "backgroundColor": "#111111",
                "borderRadius": 8,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 0,
              },
            ]
          }
        />
        <View
          pointerEvents="none"
          style={
            [
              {
                "borderColor": "rgba(255, 154, 109, 0.25)",
                "borderCurve": "continuous",
                "borderRadius": 8,
                "borderWidth": 1,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 1,
              },
            ]
          }
        />
        <View
          pointerEvents="none"
          style={
            [
              {
                "borderBottomLeftRadius": 3,
                "borderBottomRightRadius": 3,
                "bottom": 5,
                "height": 6,
                "left": 0,
                "position": "absolute",
                "right": 3,
              },
              {
                "transform": [
                  {
                    "translateY": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "transparent",
                "rgba(255, 255, 255, 0.04)",
                "rgba(255, 255, 255, 0.12)",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            locations={
              [
                0,
                0.4,
                1,
              ]
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "borderBottomLeftRadius": 7,
                "borderBottomRightRadius": 7,
                "flex": 1,
              }
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            [
              {
                "borderBottomWidth": 5,
                "borderColor": "#000000",
                "borderCurve": "continuous",
                "borderRadius": 8,
                "borderRightWidth": 3,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 1,
              },
            ]
          }
        />
        <View
          pointerEvents="none"
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 0,
              },
            ]
          }
        >
          <View
            style={
              {
                "borderColor": "rgba(0,0,0,0.6)",
                "borderCurve": "continuous",
                "borderLeftWidth": 1,
                "borderRadius": 8,
                "borderRightWidth": 1,
                "borderTopWidth": 2,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <LinearGradient
            colors={
              [
                "rgba(0,0,0,0.8)",
                "transparent",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "borderTopLeftRadius": 8,
                "borderTopRightRadius": 8,
                "height": 16,
                "width": "100%",
              }
            }
          />
        </View>
        <ActivityIndicator
          color="#FFFFFF"
          size="small"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton renders correctly - not full width 1`] = `
<View
  accessibilityLabel="Submit"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "elevation": 8,
            "shadowColor": "#995C41",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 5,
            "width": "100%",
          },
          {
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 5,
            "transform": [
              {
                "translateY": 0,
              },
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderCurve": "continuous",
            "borderRadius": 8,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 21,
            "paddingLeft": 16,
            "paddingRight": 19,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <LinearGradient
          colors={
            [
              "#202020",
              "#0d0d0d",
            ]
          }
          end={
            {
              "x": 0,
              "y": 1,
            }
          }
          locations={
            [
              0,
              0.9018,
            ]
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            [
              {
                "backgroundColor": "#111111",
                "borderRadius": 8,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 0,
              },
            ]
          }
        />
        <View
          pointerEvents="none"
          style={
            [
              {
                "borderColor": "rgba(255, 154, 109, 0.25)",
                "borderCurve": "continuous",
                "borderRadius": 8,
                "borderWidth": 1,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 1,
              },
            ]
          }
        />
        <View
          pointerEvents="none"
          style={
            [
              {
                "borderBottomLeftRadius": 3,
                "borderBottomRightRadius": 3,
                "bottom": 5,
                "height": 6,
                "left": 0,
                "position": "absolute",
                "right": 3,
              },
              {
                "transform": [
                  {
                    "translateY": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "transparent",
                "rgba(255, 255, 255, 0.04)",
                "rgba(255, 255, 255, 0.12)",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            locations={
              [
                0,
                0.4,
                1,
              ]
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "borderBottomLeftRadius": 7,
                "borderBottomRightRadius": 7,
                "flex": 1,
              }
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            [
              {
                "borderBottomWidth": 5,
                "borderColor": "#000000",
                "borderCurve": "continuous",
                "borderRadius": 8,
                "borderRightWidth": 3,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 1,
              },
            ]
          }
        />
        <View
          pointerEvents="none"
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 0,
              },
            ]
          }
        >
          <View
            style={
              {
                "borderColor": "rgba(0,0,0,0.6)",
                "borderCurve": "continuous",
                "borderLeftWidth": 1,
                "borderRadius": 8,
                "borderRightWidth": 1,
                "borderTopWidth": 2,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <LinearGradient
            colors={
              [
                "rgba(0,0,0,0.8)",
                "transparent",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "borderTopLeftRadius": 8,
                "borderTopRightRadius": 8,
                "height": 16,
                "width": "100%",
              }
            }
          />
        </View>
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "PlusJakartaSans-Medium",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          Submit
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`PrimaryButton renders correctly - without divider 1`] = `
<View
  accessibilityLabel="Continue"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "elevation": 8,
            "shadowColor": "#995C41",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 5,
            "width": "100%",
          },
          {
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 5,
            "transform": [
              {
                "translateY": 0,
              },
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderCurve": "continuous",
            "borderRadius": 8,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingBottom": 21,
            "paddingLeft": 16,
            "paddingRight": 19,
            "paddingTop": 16,
            "width": "100%",
          }
        }
      >
        <LinearGradient
          colors={
            [
              "#202020",
              "#0d0d0d",
            ]
          }
          end={
            {
              "x": 0,
              "y": 1,
            }
          }
          locations={
            [
              0,
              0.9018,
            ]
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <View
          style={
            [
              {
                "backgroundColor": "#111111",
                "borderRadius": 8,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 0,
              },
            ]
          }
        />
        <View
          pointerEvents="none"
          style={
            [
              {
                "borderColor": "rgba(255, 154, 109, 0.25)",
                "borderCurve": "continuous",
                "borderRadius": 8,
                "borderWidth": 1,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 1,
              },
            ]
          }
        />
        <View
          pointerEvents="none"
          style={
            [
              {
                "borderBottomLeftRadius": 3,
                "borderBottomRightRadius": 3,
                "bottom": 5,
                "height": 6,
                "left": 0,
                "position": "absolute",
                "right": 3,
              },
              {
                "transform": [
                  {
                    "translateY": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "transparent",
                "rgba(255, 255, 255, 0.04)",
                "rgba(255, 255, 255, 0.12)",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            locations={
              [
                0,
                0.4,
                1,
              ]
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "borderBottomLeftRadius": 7,
                "borderBottomRightRadius": 7,
                "flex": 1,
              }
            }
          />
        </View>
        <View
          pointerEvents="none"
          style={
            [
              {
                "borderBottomWidth": 5,
                "borderColor": "#000000",
                "borderCurve": "continuous",
                "borderRadius": 8,
                "borderRightWidth": 3,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 1,
              },
            ]
          }
        />
        <View
          pointerEvents="none"
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "opacity": 0,
              },
            ]
          }
        >
          <View
            style={
              {
                "borderColor": "rgba(0,0,0,0.6)",
                "borderCurve": "continuous",
                "borderLeftWidth": 1,
                "borderRadius": 8,
                "borderRightWidth": 1,
                "borderTopWidth": 2,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <LinearGradient
            colors={
              [
                "rgba(0,0,0,0.8)",
                "transparent",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            style={
              {
                "borderTopLeftRadius": 8,
                "borderTopRightRadius": 8,
                "height": 16,
                "width": "100%",
              }
            }
          />
        </View>
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontFamily": "PlusJakartaSans-Medium",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          Continue
        </Text>
      </View>
    </View>
  </View>
</View>
`;
